ms version db model && generic struct ( resp dto )
