# docs/swagger.json
@@ -24,7 +24,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.RespDto"
+                            "$ref": "#/definitions/dto.MessageRespDto"
                         }
                     },
                     "502": {
@@ -52,7 +52,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.RespDto"
+                            "$ref": "#/definitions/dto.MsListRespDto"
                         }
                     },
                     "500": {
@@ -89,7 +89,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.RespDto"
+                            "$ref": "#/definitions/dto.MsRespDto"
                         }
                     },
                     "422": {
@@ -132,7 +132,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.RespDto"
+                            "$ref": "#/definitions/dto.MsRespDto"
                         }
                     },
                     "404": {
@@ -143,7 +143,7 @@
                     }
                 }
             },
-            "post": {
+            "put": {
                 "description": "Update a microservice by ID",
                 "consumes": [
                     "application/json"
@@ -176,7 +176,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.RespDto"
+                            "$ref": "#/definitions/dto.MsRespDto"
                         }
                     },
                     "404": {
@@ -223,7 +223,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.RespDto"
+                            "$ref": "#/definitions/dto.MessageRespDto"
                         }
                     },
                     "404": {
@@ -247,7 +247,55 @@
             "type": "object",
             "properties": {
                 "errors": {
-                    "description": "TODO: generic field..."
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "dto.MessageRespDto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "dto.MsDto": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.MsListRespDto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.MsDto"
+                    }
                 },
                 "message": {
                     "type": "string"
@@ -267,18 +315,17 @@
                     "type": "string"
                 },
                 "name": {
-                    "description": "TODO: unique name validator...",
                     "type": "string",
                     "maxLength": 255,
                     "minLength": 1
                 }
             }
         },
-        "dto.RespDto": {
+        "dto.MsRespDto": {
             "type": "object",
             "properties": {
                 "data": {
-                    "description": "TODO: generic field..."
+                    "$ref": "#/definitions/dto.MsDto"
                 },
                 "message": {
                     "type": "string"
